--- a/deno.json
+++ b/deno.json
@@ -8,7 +8,7 @@
     "start": "deno run --unstable -A --watch=static/,routes/ dev.ts",
     "test": "KV_PATH=:memory: deno test -A --unstable --coverage=./cov",
     "check:license": "deno run --allow-read --allow-write tools/check_license.ts",
-    "ok": "deno fmt --check && deno lint && deno task check:license --check && deno check main.ts && deno task test",
+    "ok": "deno fmt --check && deno lint && deno check main.ts && deno task test",
     "cov": "deno coverage ./cov/ --lcov --exclude='test.ts' > cov.lcov"
   },
   "compilerOptions": {
