Shedding most of the unused SaaSKit code

--- a/.example.env
+++ b/.example.env
@@ -1,6 +1,18 @@
+# Constants
+SITE_BASE_URL=http://localhost:8000
+
+# GitHub
 GITHUB_CLIENT_ID=xxx
 GITHUB_CLIENT_SECRET=xxx
 
-STRIPE_SECRET_KEY=sk_test_xxx
-STRIPE_WEBHOOK_SECRET=xxx
-STRIPE_PREMIUM_PLAN_PRICE_ID=xxx
+# Stripe
+# STRIPE_SECRET_KEY=sk_test_xxx
+# STRIPE_WEBHOOK_SECRET=xxx
+# STRIPE_PREMIUM_PLAN_PRICE_ID=xxx
+
+# Email
+SEND_EMAIL_TO_CONSOLE=true
+RESEND_API_KEY=re_xxx
+
+# Security
+EMPLOYER_SESSION_COOKIE_SECURE=false
