--- a/deno.json
+++ b/deno.json
@@ -25,9 +25,9 @@
     "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.2.3",
     "std/": "https://deno.land/std@0.188.0/",
     "stripe": "./stripe.ts",
-    "feed": "https://esm.sh/feed@4.2.2",
     "kv_oauth": "https://deno.land/x/deno_kv_oauth@v0.2.5/mod.ts",
-    "chart.js": "https://esm.sh/stable/chart.js@4.3.0/auto?target=es2022"
+    "chart.js": "https://esm.sh/stable/chart.js@4.3.0/auto?target=es2022",
+    "ulid": "https://deno.land/x/ulid/mod.ts"
   },
   "exclude": [
     "cov/"
