--- a/deno.json
+++ b/deno.json
@@ -8,7 +8,9 @@
     "start": "deno run --unstable -A --watch=static/,routes/ dev.ts",
     "test": "KV_PATH=:memory: deno test -A --unstable --coverage=./cov",
     "ok": "deno fmt --check && deno lint && deno check main.ts && deno task test",
-    "cov": "deno coverage ./cov/ --lcov --exclude='test.ts' > cov.lcov"
+    "cov": "deno coverage ./cov/ --lcov --exclude='test.ts' > cov.lcov",
+    "build": "deno run -A dev.ts build",
+    "preview": "deno run -A main.ts"
   },
   "compilerOptions": {
     "jsx": "react-jsx",
@@ -16,11 +18,11 @@
   },
   "imports": {
     "@/": "./",
-    "$fresh/": "https://deno.land/x/fresh@1.3.1/",
+    "$fresh/": "https://deno.land/x/fresh@1.4.1/",
     "$gfm": "https://deno.land/x/gfm@0.2.4/mod.ts",
     "preact": "https://esm.sh/preact@10.15.1",
     "preact/": "https://esm.sh/preact@10.15.1/",
-    "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.2.0",
+    "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.2.1",
     "@preact/signals": "https://esm.sh/*@preact/signals@1.1.3",
     "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.2.3",
     "std/": "https://deno.land/std@0.188.0/",
