Admin page and cookie settings

--- a/.example.env
+++ b/.example.env
@@ -15,4 +15,6 @@ SEND_EMAIL_TO_CONSOLE=true
 RESEND_API_KEY=re_xxx
 
 # Security
-EMPLOYER_SESSION_COOKIE_SECURE=false
+ADMIN_PASSWORD=xxx
+ADMIN_USERNAME=xxx
+USE_SECURE_COOKIES=false
