--- a/deno.json
+++ b/deno.json
@@ -20,6 +20,9 @@
     "@/": "./",
     "$fresh/": "https://deno.land/x/fresh@1.4.2/",
     "$gfm": "https://deno.land/x/gfm@0.2.4/mod.ts",
+    "basic_auth": "https://deno.land/x/basic_auth@v1.1.1/mod.ts",
+    "chart.js": "https://esm.sh/stable/chart.js@4.3.0/auto?target=es2022",
+    "kv_oauth": "https://deno.land/x/deno_kv_oauth@v0.2.5/mod.ts",
     "preact": "https://esm.sh/preact@10.15.1",
     "preact/": "https://esm.sh/preact@10.15.1/",
     "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.2.1",
@@ -27,8 +30,6 @@
     "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.2.3",
     "std/": "https://deno.land/std@0.188.0/",
     "stripe": "./stripe.ts",
-    "kv_oauth": "https://deno.land/x/deno_kv_oauth@v0.2.5/mod.ts",
-    "chart.js": "https://esm.sh/stable/chart.js@4.3.0/auto?target=es2022",
     "ulid": "https://deno.land/x/ulid@v0.2.2/mod.ts"
   },
   "exclude": [
