--- a/deno.json
+++ b/deno.json
@@ -22,6 +22,8 @@
     "$gfm": "https://deno.land/x/gfm@0.2.4/mod.ts",
     "basic_auth": "https://deno.land/x/basic_auth@v1.1.1/mod.ts",
     "chart.js": "https://esm.sh/stable/chart.js@4.3.0/auto?target=es2022",
+    "kv_insights": "https://deno.land/x/deno_kv_insights@v0.5.0-alpha/mod.ts",
+    "kv_insights/": "https://deno.land/x/deno_kv_insights@v0.5.0-alpha/",
     "kv_oauth": "https://deno.land/x/deno_kv_oauth@v0.2.5/mod.ts",
     "preact": "https://esm.sh/preact@10.15.1",
     "preact/": "https://esm.sh/preact@10.15.1/",
