--- a/deno.json
+++ b/deno.json
@@ -24,13 +24,14 @@
     "chart.js": "https://esm.sh/stable/chart.js@4.3.0/auto?target=es2022",
     "kv_insights": "https://deno.land/x/deno_kv_insights@v0.5.0-alpha/mod.ts",
     "kv_insights/": "https://deno.land/x/deno_kv_insights@v0.5.0-alpha/",
-    "kv_oauth": "https://deno.land/x/deno_kv_oauth@v0.2.5/mod.ts",
+    "kv_oauth": "https://deno.land/x/deno_kv_oauth@v0.4.0/mod.ts",
+    "kv_oauth/": "https://deno.land/x/deno_kv_oauth@v0.4.0/",
     "preact": "https://esm.sh/preact@10.15.1",
     "preact/": "https://esm.sh/preact@10.15.1/",
     "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.2.1",
     "@preact/signals": "https://esm.sh/*@preact/signals@1.1.3",
     "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.2.3",
-    "std/": "https://deno.land/std@0.188.0/",
+    "std/": "https://deno.land/std@0.192.0/",
     "stripe": "./stripe.ts",
     "ulid": "https://deno.land/x/ulid@v0.2.2/mod.ts"
   },
