--- a/deno.json
+++ b/deno.json
@@ -21,6 +21,7 @@
     "$fresh/": "https://deno.land/x/fresh@1.4.2/",
     "$gfm": "https://deno.land/x/gfm@0.2.4/mod.ts",
     "basic_auth": "https://deno.land/x/basic_auth@v1.1.1/mod.ts",
+    "case": "https://deno.land/x/case@2.1.1/mod.ts",
     "chart.js": "https://esm.sh/stable/chart.js@4.3.0/auto?target=es2022",
     "kv_insights": "https://deno.land/x/deno_kv_insights@v0.5.0-alpha/mod.ts",
     "kv_insights/": "https://deno.land/x/deno_kv_insights@v0.5.0-alpha/",
