--- a/deno.json
+++ b/deno.json
@@ -6,7 +6,7 @@
     "db:seed": "deno run --allow-read --allow-env --allow-net --unstable tools/seed_submissions.ts",
     "db:reset": "deno run --allow-read --allow-env --unstable tools/reset_kv.ts",
     "start": "deno run --unstable -A --watch=static/,routes/ dev.ts",
-    "test": "KV_PATH=:memory: deno test -A --unstable --coverage=./cov",
+    "test": "KV_PATH=:memory: SITE_BASE_URL=http://localhost:8000 deno test -A --unstable --coverage=./cov",
     "ok": "deno fmt --check && deno lint && deno check main.ts && deno task test",
     "cov": "deno coverage ./cov/ --lcov --exclude='test.ts' > cov.lcov",
     "build": "deno run --unstable -A dev.ts build",
@@ -32,7 +32,7 @@
     "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.2.1",
     "@preact/signals": "https://esm.sh/*@preact/signals@1.1.3",
     "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.2.3",
-    "std/": "https://deno.land/std@0.192.0/",
+    "std/": "https://deno.land/std@0.200.0/",
     "stripe": "./stripe.ts",
     "ulid": "https://deno.land/x/ulid@v0.2.2/mod.ts"
   },
