--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,8 @@ jobs:
 
       - name: Build step
         run: "deno task build"
+        env:
+          SITE_BASE_URL: http://localhost:8000
 
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
