--- a/deno.json
+++ b/deno.json
@@ -10,7 +10,8 @@
     "ok": "deno fmt --check && deno lint && deno check main.ts && deno task test",
     "cov": "deno coverage ./cov/ --lcov --exclude='test.ts' > cov.lcov",
     "build": "deno run --unstable -A dev.ts build",
-    "preview": "deno run --unstable -A main.ts"
+    "preview": "deno run --unstable -A main.ts",
+    "update:fresh": "deno run -A -r https://fresh.deno.dev/update ."
   },
   "compilerOptions": {
     "jsx": "react-jsx",
@@ -18,7 +19,7 @@
   },
   "imports": {
     "@/": "./",
-    "$fresh/": "https://deno.land/x/fresh@1.4.2/",
+    "$fresh/": "https://deno.land/x/fresh@1.4.3/",
     "$gfm": "https://deno.land/x/gfm@0.2.4/mod.ts",
     "basic_auth": "https://deno.land/x/basic_auth@v1.1.1/mod.ts",
     "case": "https://deno.land/x/case@2.1.1/mod.ts",
