Only require passing tests on push

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -9,5 +9,8 @@ pre-commit:
       run: deno lint
     deno_check:
       run: deno check main.ts
+
+pre-push:
+  commands:
     deno_test:
-      run: deno task test
+          run: deno task test
