--- a/deno.json
+++ b/deno.json
@@ -33,9 +33,8 @@
     "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.2.1",
     "@preact/signals": "https://esm.sh/*@preact/signals@1.1.3",
     "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.2.3",
-    "std/": "https://deno.land/std@0.201.0/",
-    "stripe": "./stripe.ts",
-    "ulid": "https://deno.land/x/ulid@v0.2.2/mod.ts"
+    "std/": "https://deno.land/std@0.202.0/",
+    "stripe": "./stripe.ts"
   },
   "exclude": [
     "cov/",
@@ -57,5 +56,5 @@
       "_fresh"
     ]
   },
-  "tea": "deno.land^1.36.3 github.com/evilmartians/lefthook^1.4.10"
+  "tea": "deno.land^1.37.0 github.com/evilmartians/lefthook^1.4.10"
 }
