Google auth first pass

--- a/.example.env
+++ b/.example.env
@@ -5,6 +5,10 @@ SITE_BASE_URL=http://localhost:8000
 GITHUB_CLIENT_ID=xxx
 GITHUB_CLIENT_SECRET=xxx
 
+# Google
+GOOGLE_CLIENT_ID=xxx
+GOOGLE_CLIENT_SECRET=xxx
+
 # Stripe
 # STRIPE_SECRET_KEY=sk_test_xxx
 # STRIPE_WEBHOOK_SECRET=xxx
