--- a/deno.json
+++ b/deno.json
@@ -24,10 +24,14 @@
     "basic_auth": "https://deno.land/x/basic_auth@v1.1.1/mod.ts",
     "case": "https://deno.land/x/case@2.1.1/mod.ts",
     "chart.js": "https://esm.sh/stable/chart.js@4.3.0/auto?target=es2022",
+    "fast-blurhash": "npm:fast-blurhash@^1.1.2",
+    "gravatar": "npm:gravatar@^1.8.2",
     "kv_insights": "https://deno.land/x/deno_kv_insights@v0.5.0-alpha/mod.ts",
     "kv_insights/": "https://deno.land/x/deno_kv_insights@v0.5.0-alpha/",
     "kv_oauth": "https://deno.land/x/deno_kv_oauth@v0.6.1/mod.ts",
     "kv_oauth/": "https://deno.land/x/deno_kv_oauth@v0.6.1/",
+    "lightningcss": "npm:lightningcss@^1.22.0",
+    "marked": "npm:marked@^9.0.3",
     "preact": "https://esm.sh/preact@10.15.1",
     "preact/": "https://esm.sh/preact@10.15.1/",
     "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.2.1",
