--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,7 @@ jobs:
       - name: Build step
         run: "deno task build"
         env:
+          CLICKY_SITE_ID: build_site_id
           SITE_BASE_URL: http://localhost:8000
 
       - name: Upload to Deno Deploy
