Update KV insights

--- a/deno.json
+++ b/deno.json
@@ -25,8 +25,8 @@
     "countries": "https://deno.land/x/countries@v1.1.2/mod.ts",
     "fast-blurhash": "npm:fast-blurhash@^1.1.2",
     "gravatar": "npm:gravatar@^1.8.2",
-    "kv_insights": "https://deno.land/x/deno_kv_insights@v0.5.0-alpha/mod.ts",
-    "kv_insights/": "https://deno.land/x/deno_kv_insights@v0.5.0-alpha/",
+    "kv_insights": "https://deno.land/x/deno_kv_insights@v0.7.0-beta/mod.ts",
+    "kv_insights/": "https://deno.land/x/deno_kv_insights@v0.7.0-beta/",
     "kv_oauth": "https://deno.land/x/deno_kv_oauth@v0.6.1/mod.ts",
     "kv_oauth/": "https://deno.land/x/deno_kv_oauth@v0.6.1/",
     "lightningcss": "npm:lightningcss@^1.22.0",
