Back to OAuth first sign in

--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -21,7 +21,7 @@ jobs:
         urls: |
           $URL
           $URL/about
-          $URL/start/developer
+          $URL/signin
         temporaryPublicStorage: true
       env:
         LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
