Update lightningcss and use browserslist

--- a/deno.json
+++ b/deno.json
@@ -19,6 +19,7 @@
     "$fresh/": "https://deno.land/x/fresh@1.6.1/",
     "$gfm": "https://deno.land/x/gfm@0.2.4/mod.ts",
     "basic_auth": "https://deno.land/x/basic_auth@v1.1.1/mod.ts",
+    "browserslist": "npm:browserslist@^4.22.2",
     "case": "https://deno.land/x/case@2.1.1/mod.ts",
     "chart.js": "https://esm.sh/stable/chart.js@4.3.0/auto?target=es2022",
     "countries": "https://deno.land/x/countries@v1.1.2/mod.ts",
@@ -28,7 +29,7 @@
     "kv_insights/": "https://deno.land/x/deno_kv_insights@v0.7.0-beta/",
     "kv_oauth": "https://deno.land/x/deno_kv_oauth@v0.10.0/mod.ts",
     "kv_oauth/": "https://deno.land/x/deno_kv_oauth@v0.10.0/",
-    "lightningcss": "npm:lightningcss@^1.22.0",
+    "lightningcss": "npm:lightningcss@^1.22.1",
     "marked": "npm:marked@^9.0.3",
     "preact": "https://esm.sh/preact@10.19.2",
     "preact/": "https://esm.sh/preact@10.19.2/",
