LinkedIn OAuth provider

--- a/.example.env
+++ b/.example.env
@@ -9,6 +9,10 @@ GITHUB_CLIENT_SECRET=xxx
 GOOGLE_CLIENT_ID=xxx
 GOOGLE_CLIENT_SECRET=xxx
 
+# LinkedIn
+LINKED_IN_CLIENT_ID=xxx
+LINKED_IN_CLIENT_SECRET=xxx
+
 # Stripe
 # STRIPE_SECRET_KEY=sk_test_xxx
 # STRIPE_WEBHOOK_SECRET=xxx
