--- a/deno.json
+++ b/deno.json
@@ -27,8 +27,8 @@
     "gravatar": "npm:gravatar@^1.8.2",
     "kv_insights": "https://deno.land/x/deno_kv_insights@v0.7.0-beta/mod.ts",
     "kv_insights/": "https://deno.land/x/deno_kv_insights@v0.7.0-beta/",
-    "kv_oauth": "https://deno.land/x/deno_kv_oauth@v0.10.0/mod.ts",
-    "kv_oauth/": "https://deno.land/x/deno_kv_oauth@v0.10.0/",
+    "kv_oauth": "https://raw.githubusercontent.com/denoland/deno_kv_oauth/handle-callback-request-options/mod.ts",
+    "kv_oauth/": "https://raw.githubusercontent.com/denoland/deno_kv_oauth/handle-callback-request-options/",
     "lightningcss": "npm:lightningcss@^1.22.1",
     "marked": "npm:marked@^9.0.3",
     "preact": "https://esm.sh/preact@10.19.2",
